src/style.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

#content{
  width: 100vw;
  height: 100vh;
  display: grid;
  grid-template-columns:  20rem 1fr;
  grid-template-rows: 4rem 1fr;
  grid-template-areas:
  'searchBar cityBar'
  'citiesContainer weatherContainer';
}

/* search bar */

#searchBar{
  grid-area: searchBar;
  display: grid;
  grid-template-columns: 2rem 1fr 2rem;
  grid-template-areas: '. searchEntry autoLocateButton';
  background-color: green;
  align-items: center;
  padding: 1em;
}

#searchEntry{
grid-area: searchEntry;
height: 2rem;
border-radius: 1rem;
border:none;
padding: 1rem;
}

#autoLocateButton{
grid-area: autoLocateButton;
background: none;
border: none;
}
/* cities container */

#citiesContainer{
  grid-area: citiesContainer;
  background-color: red;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#searchResults{
  display: none;
  flex-direction: column;
  align-items: center;
  background-color: hsla(0, 0%, 100%, 0.95);
  width: 18rem;
  position: absolute;
}

#citiesList{
  display: flex;
  flex-direction: column;
  align-items: center;
}

#citiesList div{
  display: grid;
  grid-template-columns: 1fr 3fr 2fr auto;
  align-items: center;
  width: 100%;
  margin: .25rem 1rem;
  padding: .25rem 1rem;
  background-color: white;
  box-shadow: 5px 5px 5px hsl(0,0%,0%);
  border-radius: 1rem;
}

#citiesList div:hover{
  background-color: hsla(0, 0%, 100%, 0.75);
}


/* city bar */

#cityBar{
  grid-area: cityBar;
  display: grid;
  grid-template-columns: 5rem 1fr 5rem;
  grid-template-areas: 'openCitiesHalf cityNameTitle menuContainer';
  background-color: blue;
  align-items: center;
  padding: 1em;
}

#openCitiesHalf{
  grid-area: openCitiesHalf;
  height: 2rem;
  background: none;
  border: none;
  justify-self: flex-start;
}

#cityNameTitle{
  grid-area: cityNameTitle;
  justify-self: center;
  font-size: 2rem;
}

#menu{
  grid-area: menuContainer;
  height: 2rem;
  width: 5rem;
  background: none;
  border: none;
  display: flex;
  align-items: flex-end;
  flex-direction: column;
}
.menuContents{
  display: flex;
  top: 4rem;
  padding: 1em;
  gap: 1rem;
  flex-direction: column;
  position: absolute;
  z-index: 999;
  background-color: white;
}

.menuHide{
  display: none;
}

#menuButton{
  background: none;
  border: none;
  height:2rem;
}
#menuButton:hover{
  cursor: pointer;
  color: hsl(0, 0%, 80%);
}

#weatherContainer{
  grid-area: weatherContainer;
  background-color: yellow;
}

/* Weather Container */

#weatherContainer{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

#weatherSubcontainer{
  display: grid;
  width: min(80%, 500px);
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-areas:
  'currentTemp currentTemp'
  'currentConditions currentConditions'
  'dailyHigh dailyLow';
}

#weatherPageTemp{
  grid-area: currentTemp;
  align-self: center;
  justify-self: center;
  font-size: 7rem;
}
#weatherPageConditions{
  grid-area: currentConditions;
  align-self: center;
  justify-self: center;
  font-size: 5rem;
}
#weatherPageHighTemp{
  grid-area: dailyHigh;
  align-self: center;
  justify-self: center;
  font-size: 3rem;
}
#weatherPageLowTemp{
  grid-area: dailyLow;
  align-self: center;
  justify-self: center;
  font-size: 3rem;
}

